--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
     <div class="header">
         <div class="logo">
             <img class="imgGoogle" src="https://www.google.by/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
-        </div>
+        </div> 
 
         <div class="searchPanel">
             <input class="inputSearch" maxlength="2048"> 
@@ -24,12 +23,8 @@
         </div>
     </div>
     </div>
-<div class="searchResult">
-</div>
-
-<div class="pagination">
-  </div>
-<div class="answers"></div>
+    <div class="searchResult"></div>
+    <div class="pagination"></div>
 </body>
 <script src="index.js"></script>
 </html>
