--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
     <div class="searchResult"></div>
     <div class="pagination"></div>
 </body>
-<script src="index.js"></script>
+<script type="module" src="./js/index.js"></script>
 </html>
 
